[package]
name = "math_lib"
version = "0.1.0"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.59"
colored = "2.0.0"
serde = "1.0.142"
serde_json = "1.0.83"
log = "0.4.17"

[dev-dependencies]
criterion = "0.3.6"
bacon = "2.2.1"
approx = "0.3"
quickcheck = { version = "0.9", default-features = false }
rand = "0.7"

[[bench]]
name = "benchmarks"
harness = false     # if true, the benchmark will be run with the `criterion` crate # disables rust built in benchmarks


[dependencies.plotters]
version = "0.3.1"
default-features = false
features = ["svg_backend", "area_series", "line_series"]
optional = true

[features]
# default = ["gnuplot_backend", "plotters_backend"]

# Enable the gnuplot plotting backend.
# gnuplot_backend = ["criterion-plot"]

# Enable the plotters plotting backend.
plotters_backend = ["plotters"]
